<resources>
    <string name="app_name">Estude_Mais</string>
    <string name="username_hint_text">Digite seu nome de usuário</string>
    <string name="password_hint_text">Digite sua senha</string>
    <string name="radio_button_student_text">Aluno</string>
    <string name="radio_button_teacher_text">Professor</string>
    <string name="radio_group_label_text">Você é aluno ou professor?</string>
    <string name="button_login_text">Entrar</string>
    <string name="create_account_button_text"><u>Ainda não possui conta? Clique aqui e cadastre-se</u></string>
    <string name="account_icon">account_icon</string>
    <string name="register_label_text">Cadastro</string>
    <string name="register_nameComplete_hintText">Digite seu nome completo</string>
    <string name="register_username_hintText">Digite seu nome de usuário</string>
    <string name="register_email_hintText">Digite seu e-mail</string>
    <string name="password_repeat_hint_text">Digite sua senha novamente</string>
    <string name="register_button_text">Cadastrar</string>
    <string name="back_register_button">back register button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nome Completo</string>
    <string name="nav_header_subtitle">fulano@hotmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Perfil</string>
    <string name="menu_activities">Atividades</string>
    <string name="level_text">Level 0</string>
    <string name="experience_text">Experiência</string>
    <string name="level_experience_text">15/100</string>
    <string name="course_textview">Selecione o curso</string>
    <string name="activities_filter_textview">Selecione quais atividades quer ver</string>
    <string name="activitie_title">Relatório 04</string>
    <string name="activitie_discipline">Disciplina: Biologia</string>
    <string name="activitie_teacher">Professor: Cláudio</string>
    <string name="activitie_deadline">Deadline: 20/05/2022</string>
    <string name="activitie_checkbox">Marcar como completa</string>
    <string name="activitie_grade">Nota: 9.5</string>
    <string name="activitie_maxexp">Experiência máxima: 200xp</string>
    <string name="activitie_expobtained">Experiência obtida: 190xp</string>
    <string name="switch_allow_view_text">Permitir visualização de seu nome nos rankings</string>
    <string name="biography_text">Biografia</string>
    <string name="menu_ranking">Ranking</string>
    <string name="student_name_text">Nome de Usuário</string>
    <string name="student_points_text">Pontos</string>
    <string name="ranking_student_position">#</string>
    <string name="menu_courses">Cursos</string>
    <string name="courses_text">Cursos matriculados</string>
    <string name="course_name">Biologia</string>
    <string name="course_initdate">14/05/2022</string>
    <string name="teacher_name_text">Professor</string>
    <string name="course_init_date_text">Data de início:</string>
    <string name="course_name_text">Biologia</string>
    <string name="achievement_label_text">Conquistas</string>
    <string name="badge_level_text">Level 0</string>
    <string name="badges_label_text">Conquistas</string>
    <string name="spinner_filter_description">Spinner Filter</string>
    <string name="spinner_disciplines_description">Spinner Disciplines</string>
    <string name="star_image_profile">star image</string>
    <string name="badge_image">Badge Image</string>
    <string name="nav_star_image">Nav Star Image</string>
    <string name="navbar_teacher_name_text">Professor Alec</string>
    <string name="nav_header_teacher_email_text">alec@bol.com</string>
    <string name="teacher_courses_list_label_text">Cursos</string>
    <string name="courses_list_teacher_newcourse_text">+ Criar novo curso</string>
    <string name="newcourse_title_text">Titulo do curso</string>
    <string name="newcourse_biography_text">Descrição do curso</string>
    <string name="newcourse_password_switch_text">Habilitar senha para entrar no curso</string>
    <string name="newcourse_password_text">Digite a senha do curso</string>
    <string name="newcourse_createbutton">Criar</string>
    <string name="newcourse_label_text">Criação de curso</string>

    <string name="newactivity_label_text">Criação de atividade</string>
    <string name="newactivity_title_text">Titulo da atividade</string>
    <string name="newactivity_descrption_text">Pequena descrição da atividade</string>
    <string name="newactivity_deadline_text">Data limite de entrega</string>
    <string name="newactivity_experience_text">Experiência ganha(max 200)</string>
    <string name="newactivity_createbutton">Criar</string>
    <string name="teacher_course_name_text">Biologia</string>
    <string name="teacher_course_init_date_text">Data de criação:</string>
    <string name="teacher_activity_name_text">Relatorio 04</string>
    <string name="teacher_activity_init_date_text">Data de criação:</string>
    <string name="teacher_activity_deadline_date_text">Deadline:</string>
    <string name="teacher_activity_experience_text">Experiência máxima:</string>
    <string name="activity_students_item_name_text">João Ramalho dos Santos Souza</string>
    <string name="activity_students_item_checkbox_student">Marcação do Estudante de entregue</string>
    <string name="teacher_student_name_text">Carlos José Braga</string>
    <string name="teacher_student_profile_media_text">Media: 5.6</string>
    <string name="teacher_student_activities_text">Lista de Atividades</string>
    <string name="teacher_student_activites_discipline_label_text">Biologia</string>
    <string name="student_activities_item_name_text">Relatorio 01</string>
    <string name="student_activities_item_checkbox_student_text">Marcação do Estudante de entregue</string>
    <string name="teacher_menu_students">Estudantes</string>
    <string name="teacher_menu_Cursos">Cursos</string>
    <string name="teacher_profile_name_text">Alec</string>
    <string name="teacher_profile_email_text">alec@bol.com</string>
    <string name="teacher_menu_profile">Perfil</string>
    <string name="courses_list_teacher_newcourse_button_text">Nova atividade</string>
    <string name="courses_new_course_textview_text">Novo   Curso</string>
    <string name="courses_new_activity_textview_text">Nova Atividade</string>
    <string name="badge_name_text">Top 1</string>
    <string name="select_course_ranking">Selecione o curso</string>
    <string name="new_course_button">New Course Button</string>
    <string name="add_new_course">add new course</string>
    <string name="course_description_text">Descrição do curso</string>
    <string name="activity_description_text">Descrição da atividade</string>
    <string name="ranking_global">Ranking Global</string>
    <string name="radio_button_all_activities_text">Todas</string>
    <string name="radio_button_evaluated_activities_text">Avaliadas</string>
    <string name="radio_button_not_evaluated_activities_text">Não Avaliadas</string>
    <string name="ranking_button_image_text">Ranking Button Image</string>
    <string name="course_entry_button">Entrar</string>
    <string name="student_course_teacher_name_text">Professor:</string>
    <string name="search_new_course_button">Search new course</string>
    <string name="delete_acitivity_button">Delete acitivity Button</string>
    <string name="add_activity_button">Add activity button</string>
    <string name="delete_course_button">Delete course button</string>
    <string name="ranking_course_button">Ranking course button</string>
    <string name="deadline_clock">Deadline</string>
    <string name="date_choice_hint">Clique para escolher</string>
    <string name="date_choice_text">Clique para selecionar uma data</string>
    <string name="update_profile_button">update_profile_button</string>
    <string name="input_name_code">Digite seu nome completo aqui</string>
    <string name="input_biography_code">Escreva sua biografia</string>
    <string name="username_profile_text">Nome de usuário</string>
    <string name="ranking_student_actual_name">Nome</string>
    <string name="ranking_student_actual_experience">Experiência</string>
    <string name="ranking_student_actual_position">Posição</string>
</resources>