<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/teacher_nav_courses"
            android:icon="@drawable/ic_baseline_book"
            android:title="@string/teacher_menu_Cursos" />

        <item
            android:id="@+id/ranking_nav_courses"
            android:icon="@drawable/ic_baseline_show_chart"
            android:title="@string/ranking_global" />

        <item
            android:id="@+id/teacher_nav_profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/teacher_menu_profile" />

    </group>
</menu>