<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_small"
    tools:context=".view.RankingGlobalFragment">

    <TextView
        android:id="@+id/ranking_student_actual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ranking_student_actual_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ranking_student_actual_experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ranking_student_actual_experience"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ranking_student_actual" />

    <TextView
        android:id="@+id/ranking_student_actual_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ranking_student_actual_position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ranking_student_actual_experience" />

    <TextView
        android:id="@+id/ranking_student_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ranking_student_position"
        android:layout_marginTop="@dimen/margin_verySmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ranking_student_actual_position" />

    <TextView
        android:id="@+id/ranking_student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="@dimen/margin_verySmall"
        android:text="@string/student_name_text"
        app:layout_constraintStart_toEndOf="@+id/ranking_student_position"
        app:layout_constraintTop_toBottomOf="@+id/ranking_student_actual_position" />

    <TextView
        android:id="@+id/ranking_student_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_points_text"
        android:layout_marginTop="@dimen/margin_verySmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ranking_student_actual_position" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_students_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_small"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ranking_student_name" />

</androidx.constraintlayout.widget.ConstraintLayout>