<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_small"
    tools:context=".view.teacher.TeacherNewActivityFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/newactivity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/newactivity_title_text"
        android:inputType="text"
        android:minHeight="@dimen/minHeight_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor,TextContrastCheck" />

    <EditText
        android:id="@+id/newactivity_descrption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/newactivity_descrption_text"
        android:inputType="text"
        android:maxLength="500"
        android:maxLines="10"
        android:minHeight="@dimen/minHeight_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newactivity_title"
        tools:ignore="Autofill,LabelFor,TextContrastCheck" />

    <TableRow
        android:id="@+id/deadline_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_verySmall"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/newactivity_descrption"
        tools:layout_editor_absoluteX="20dp">
        <ImageView
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_baseline_access_time_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/deadline_clock" />
        <TextView
            android:id="@+id/deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_choice_hint"
            android:text="@string/date_choice_text" />
    </TableRow>

    <Button
        android:id="@+id/newactivity_createbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryColor"
        android:layout_marginTop="@dimen/margin_verySmall"
        android:text="@string/newactivity_createbutton"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadline_row"
        tools:ignore="TextContrastCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>