<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/primaryLightColor"
    android:padding="@dimen/margin_small"
    tools:context=".view.teacher.TeacherProfileFragment">

    <ImageView
        android:id="@+id/teacher_profile_image"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:contentDescription="@string/nav_header_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

    <ImageButton
        android:id="@+id/update_teacher_profile"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:contentDescription="@string/update_profile_button"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/primaryColor"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/teacher_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_verySmall"
        android:autofillHints="name"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacher_profile_image"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/teacher_profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_verySmall"
        android:autofillHints="name"
        android:textSize="@dimen/medium_text_size"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/username_profile_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacher_profile_name"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/teacher_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_verySmall"
        android:text="@string/nav_header_subtitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacher_profile_username"
        tools:ignore="Autofill,LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>